--- a/views/index.ejs
+++ b/views/index.ejs
@@ -208,7 +208,7 @@
                                     <div class="catagory-content">
                                         <img src="img/core-img/icon-3.png" alt="">
                                         <a>
-                                            <h6>Shopping</h6>
+                                            <h6>City</h6>
                                         </a>
                                     </div>
                                 </div>
@@ -296,41 +296,41 @@
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="img/bg-img/editor-1.jpg" alt="">
+                        <img src="img/bg-img/editor-1.jpg" alt="" onclick="window.location='explorer?keyword=&city=Bangkok&type=ALL';">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">Bangkok</a>
+                                <a href="explorer?keyword=&city=Bangkok&type=ALL">Bangkok</a>
                                 <a href="#">Thailand</a>
                             </div>
-                            <div class="add-more">
+                            <!-- <div class="add-more">
                                 <a href="#">+</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.4s">
-                        <img src="img/bg-img/editor-2.jpg" alt="">
+                        <img src="img/bg-img/editor-2.jpg" alt="" onclick="window.location='explorer?keyword=&city=Nonthaburi&type=ALL';">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">Nonthaburi</a>
+                                <a href="explorer?keyword=&city=Nonthaburi&type=ALL">Nonthaburi</a>
                                 <a href="#">Thailand</a>
                             </div>
-                            <div class="add-more">
+                            <!-- <div class="add-more">
                                 <a href="#">+</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.6s">
-                        <img src="img/bg-img/editor-3.jpg" alt="">
+                        <img src="img/bg-img/editor-3.jpg" alt="" onclick="window.location='explorer?keyword=&city=Ayutthaya&type=ALL';">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">Ayutthaya</a>
+                                <a href="explorer?keyword=&city=Ayutthaya&type=ALL">Ayutthaya</a>
                                 <a href="#">Thailand</a>
                             </div>
-                            <div class="add-more">
+                            <!-- <div class="add-more">
                                 <a href="#">+</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -594,7 +594,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <a href="#">+</a>
+                            <!-- <a href="#">+</a> -->
                         </div>
                     </div>
                 </div>
@@ -613,7 +613,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <a href="#">+</a>
+                            <!-- <a href="#">+</a> -->
                         </div>
                     </div>
                 </div>
@@ -632,7 +632,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <a href="#">+</a>
+                            <!-- <a href="#">+</a> -->
                         </div>
                     </div>
                 </div>
@@ -651,7 +651,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <a href="#">+</a>
+                            <!-- <a href="#">+</a> -->
                         </div>
                     </div>
                 </div>
@@ -670,7 +670,7 @@
                             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <a href="#">+</a>
+                            <!-- <a href="#">+</a> -->
                         </div>
                     </div>
                 </div>
@@ -689,7 +689,7 @@
                             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <a href="#">+</a>
+                            <!-- <a href="#">+</a> -->
                         </div>
                     </div>
                 </div>
