--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Discover</title>
-
+    <title >Discover</title>
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
 
@@ -361,7 +360,7 @@
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a href="#"><img src="img/core-img/map.png" alt=""></a>
+                                <a href="/listing?123456"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -594,7 +593,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <!-- <a href="#">+</a> -->
+                            <a href="#">+</a> 
                         </div>
                     </div>
                 </div>
@@ -613,7 +612,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <!-- <a href="#">+</a> -->
+                            <a href="#">+</a>
                         </div>
                     </div>
                 </div>
@@ -632,7 +631,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <!-- <a href="#">+</a> -->
+                            <a href="#">+</a>
                         </div>
                     </div>
                 </div>
@@ -651,7 +650,7 @@
                             <p></p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <!-- <a href="#">+</a> -->
+                            <a href="#">+</a>
                         </div>
                     </div>
                 </div>
@@ -670,7 +669,7 @@
                             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <!-- <a href="#">+</a> -->
+                            <a href="#">+</a>
                         </div>
                     </div>
                 </div>
@@ -689,7 +688,7 @@
                             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
                         </div>
                         <div class="feature-events-details-btn">
-                            <!-- <a href="#">+</a> -->
+                            <a href="#">+</a>
                         </div>
                     </div>
                 </div>
