--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -401,7 +401,7 @@
 
     <!-- api JS -->
     <script src="js/api_search.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(function() {
             const queryString = window.location.search;
             const urlParams = new URLSearchParams(queryString);
@@ -449,11 +449,11 @@
                     //document.getElementById("11").href = JSON.stringify(json.result[4].place_id).slice(1, -1)
                 document.getElementById("42").innerHTML = JSON.stringify(json.result[4].destination).slice(1, -1)
                 document.getElementById("43").src = JSON.stringify(json.result[4].thumbnail_url).slice(1, -1)
-                r
+                
 
             });
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
