--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -329,7 +329,7 @@
                     </div>
                 </div>
                 <li class="nav-item">
-                    <a class="nav-link" href="listing">See more<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" onclick=qwer(); href="#">See more<span class="sr-only">(current)</span></a>
                 </li>
 
 
