--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,15 +128,14 @@
                                 <h6>What are you looking for?</h6>
                                 <form action="explorer" method="get">
                                     <input type="text" value="อาหาร" name="keyword" class="form-control custom-select" placeholder="Keyword">
-                                    <select name="city" class="custom-select">
-                                        <!-- <option value="0" selected>City Destinations</option> -->
+                                    <select name="destination" class="custom-select">
                                         <option value="Bangkok">Bangkok</option>
                                         <option value="Ayutthaya">Ayutthaya</option>
                                         <option value="SamutPrakan">SamutPrakan</option>
                                         <option value="Nonthaburi">Nonthaburi</option>
                                         <option value="PathumThani">PathumThani</option>
                                     </select>
-                                    <select name="type" class="custom-select">
+                                    <select name="catagory" class="custom-select">
                                         <option value="ALL" selected>All Catagories</option>
                                         <option value="RESTAURANT">Restaurants</option>
                                         <option value="SHOP">Shopping</option>
