--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -327,7 +327,7 @@
                         </div> -->
 
                         <!-- Opening Hours Widget -->
-                        <div class="opening-hours-widget mt-50">
+                        <div id="open" class="opening-hours-widget mt-50">
                             <h6>Opening Hours</h6>
                             <ul class="opening-hours">
                                 <li>
