--- a/views/index.ejs
+++ b/views/index.ejs
@@ -297,7 +297,7 @@
                         <img src="img/bg-img/editor-1.jpg" alt="" onclick="window.location='explorer?keyword=&city=Bangkok&type=ALL';">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="explorer?keyword=&city=Bangkok&type=ALL">Bangkok</a>
+                                <a href="explorer?keyword=&destination=Bangkok&catagory=ALL">Bangkok</a>
                                 <a href="#">Thailand</a>
                             </div>
                             <!-- <div class="add-more">
@@ -311,7 +311,7 @@
                         <img src="img/bg-img/editor-2.jpg" alt="" onclick="window.location='explorer?keyword=&city=Nonthaburi&type=ALL';">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="explorer?keyword=&city=Nonthaburi&type=ALL">Nonthaburi</a>
+                                <a href="explorer?keyword=&destination=Nonthaburi&catagory=ALL">Nonthaburi</a>
                                 <a href="#">Thailand</a>
                             </div>
                             <!-- <div class="add-more">
@@ -323,7 +323,7 @@
                         <img src="img/bg-img/editor-3.jpg" alt="" onclick="window.location='explorer?keyword=&city=Ayutthaya&type=ALL';">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="explorer?keyword=&city=Ayutthaya&type=ALL">Ayutthaya</a>
+                                <a href="explorer?keyword=&destination=Ayutthaya&catagory=ALL">Ayutthaya</a>
                                 <a href="#">Thailand</a>
                             </div>
                             <!-- <div class="add-more">
