--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -130,6 +130,7 @@
                         <form action="explorer" method="get">
                             <input type="text" id="keyword" name='keyword' class="form-control custom-select" placeholder="Keyword">
                             <select name="destination" class="custom-select" id="destination">
+                                <option value="">All City</option>
                                 <option value="Bangkok">Bangkok</option>
                                 <option value="Ayutthaya">Ayutthaya</option>
                                 <option value="SamutPrakan">SamutPrakan</option>
