--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -134,7 +134,7 @@
                 <div class="contact-form-title">
                     <h6></h6>
                 </div>
-                <form action="#">
+                <form id="data">
                     <div class="row">
                         <div class="col-12 col-md-6">
                             <input type="text" name="name" class="form-control" placeholder="Your Name">
@@ -149,7 +149,7 @@
                             <textarea name="message" class="form-control" id="Message" cols="30" rows="10" placeholder="Your Message"></textarea>
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="btn dorne-btn">Send</button>
+                            <button type="submit" class="btn dorne-btn" onclick='send()'>Send</button>
                         </div>
                     </div>
                 </form>
@@ -201,5 +201,19 @@
     <!-- Active JS -->
     <script src="js/active.js"></script>
 </body>
-
+<script>
+    function send(){
+        $.ajax({
+            url:"https://api.apispreadsheets.com/data/4052/",
+            type:"post",
+            data:$("#data").serializeArray(),
+            success: function(){
+                alert("Submitted")
+            },
+            error: function(){
+                alert("กรุณากรอกข้อมูลให้ถูกต้องและครบทุกช่อง")
+            }
+        });
+    }
+</script>
 </html>
