--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -202,6 +202,10 @@
     <script src="js/active.js"></script>
 </body>
 <script>
+    $( document ).ready(function() {
+        console.log(address)
+        address = 'มหาวิทยาลัยหอการค้าไทย';
+    });
     function send(){
         $.ajax({
             url:"https://api.apispreadsheets.com/data/4052/",
