--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -322,10 +322,28 @@
                         </div>
                     </div>
                 </a>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="single-listing?type=RESTAURANT&id=P08000887">See more<span class="sr-only">(current)</span></a>
-                </li>
-
+                </li> -->
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
 
                 <!-- Single Features Area -->
                 <!-- <div class="single-features-area">
@@ -386,16 +404,13 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
+    <!-- api JS -->
+    <script src="js/api_search.js"></script>
     <!-- Google Maps js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdVg54QthqEizFpV7yGjQCJfHRFP3PnW0"></script>
     <script src="js/google-map/explore-map-active.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
-
-
-    <!-- api JS -->
-    <script src="js/api_search.js"></script>
-    
 </body>
 
 </html>
