--- a/views/index.ejs
+++ b/views/index.ejs
@@ -356,16 +356,16 @@
                     <div class="features-slides owl-carousel">
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
+                            <img class="image" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a href="/listing?123456"><img src="img/core-img/map.png" alt=""></a>
+                                <a class="map" href="/listing?123456"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Lantana Resort</h5>
-                                    <p>Bangkok</p>
+                                    <h5 class="name">Lantana Resort</h5>
+                                    <p class="destination">Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
@@ -374,7 +374,7 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
+                            <img class="image" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
@@ -382,8 +382,8 @@
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>The Countryside Resort</h5>
-                                    <p>Maehongson</p>
+                                    <h5 class="name">The Countryside Resort</h5>
+                                    <p class="destination">Maehongson</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
@@ -750,8 +750,8 @@
     <script src="js/others/plugins.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
-    <script type="text/javascript">
-    </script>
+    <!-- API index -->
+    <script src="js/api_index.js"></script>
 </body>
 
 </html>
