--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,8 +129,8 @@
                                 <form action="explorer" method="get">
                                     <input type="text" value="อาหาร" name="keyword" class="form-control custom-select" placeholder="Keyword">
                                     <select name="destination" class="custom-select">
-                                        <option value="" selected>All City</option>
-                                        <option value="Bangkok">Bangkok</option>
+                                        <!-- <option value="" selected>All City</option> -->
+                                        <option value="Bangkok" selected>Bangkok</option>
                                         <option value="Ayutthaya">Ayutthaya</option>
                                         <option value="SamutPrakan">SamutPrakan</option>
                                         <option value="Nonthaburi">Nonthaburi</option>
