--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -274,7 +274,7 @@
                                 <option value="SHOP">Shopping</option>
                                 <option value="ACCOMMODATION">Hotels</option>
                             </select> -->
-                            <!-- <select class="custom-select" id="events-price-range">
+                    <!-- <select class="custom-select" id="events-price-range">
                                 <option selected>Price Range</option>
                                 <option value="1">$100 - $499</option>
                                 <option value="2">$500 - $999</option>
@@ -288,7 +288,7 @@
                                 <option value="3">Proximity 3</option>
                                 <option value="3">Proximity 4</option>
                                 <option value="3">Proximity 5</option> -->
-                            <!-- </select>
+                    <!-- </select>
                             <button type="submit" class="btn dorne-btn mt-50 bg-white text-dark"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                         </form>
                     </div> -->
@@ -307,13 +307,13 @@
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                            
-                            
+
+
                                 <h5 id="01">Lantana Resort</h5>
                                 <p id="02">Bangkok</p>
                             </div>
                             <div class="feature-favourite">
-                                <!--  <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
+                                <a onclick=fav(01)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -332,7 +332,7 @@
                                 <p id="12">Maehongson</p>
                             </div>
                             <div class="feature-favourite">
-                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
+                                <a onclick=fav(02)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                                 <p id="22">Krabi</p>
                             </div>
                             <div class="feature-favourite">
-                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
+                                <a onclick=fav(03)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
                                 <p id="32">Krabi</p>
                             </div>
                             <div class="feature-favourite">
-                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
+                                <a onclick=fav(04)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -389,10 +389,10 @@
                                 <p id="42">Krabi</p>
                             </div>
                             <div class="feature-favourite">
-                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
-                            </div>
-                        </div>
-                    </div>
+                                <a onclick=fav(04)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                </div>
+                </div>
+                </div>
                 </a>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="single-listing?type=RESTAURANT&id=P08000887">See more<span class="sr-only">(current)</span></a>
@@ -457,13 +457,125 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
-    <!-- api JS -->
-    <script src="js/api_search.js"></script>
+    <!-- Api JS -->
+    <!-- <script src="js/api_search.js"></script> -->
     <!-- Google Maps js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdVg54QthqEizFpV7yGjQCJfHRFP3PnW0"></script>
     <script src="js/google-map/explore-map-active.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
+
+
+    <script>
+        $(document).ready(function() {
+            try {
+                var json_str = getCookie('mycookie');
+                arr = JSON.parse(json_str);
+                console.log(arr)
+            } catch {
+                arr = []
+                console.log("no cookie")
+            }
+
+        });
+
+        function fav(count) {
+            alert("faving")
+            console.log(place_id[count])
+            arr.push(place_id[count])
+                //arr=['qwe','qwe','qwe']
+            console.log(arr)
+            var json_str = JSON.stringify(arr);
+            //createCookie('mycookie', json_str);
+            setCookie("mycookie", json_str, 30);
+        }
+
+        function setCookie(cname, cvalue, exdays) {
+            var d = new Date();
+            d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
+            var expires = "expires=" + d.toGMTString();
+            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        }
+
+        function getCookie(cname) {
+            var name = cname + "=";
+            var decodedCookie = decodeURIComponent(document.cookie);
+            var ca = decodedCookie.split(';');
+            for (var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(name) == 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+    </script>
+    <script>
+        $(document).ready(function() {
+            place_id = ""
+            $.ajaxSetup({
+                headers: {
+                    'Authorization': 'bearer G(LsNMYQxwthtlPATlMG9zWWTmzqnzcNuK6fQeo86o0KzNSdoF2kMFReYcJ2KwTCpq8QfxXKL00BqUe7Jt4TJtW=====2',
+                    'Accept-Language': 'th'
+                }
+            });
+            const queryString = window.location.search;
+            const urlParams = new URLSearchParams(queryString);
+            const keyword = urlParams.get('keyword');
+            const destination = urlParams.get('destination');
+            const catagory = urlParams.get('catagory');
+            document.getElementById('keyword').value = keyword;
+            document.getElementById('destination').value = destination;
+            document.getElementById('catagory').value = catagory;
+            api = "https://tatapi.tourismthailand.org/tatapi/v5/places/search?keyword=" + keyword + "&categories=" + catagory + "&provinceName=" + destination;
+            if (keyword && destination && catagory) {} else {
+                document.getElementById('keyword').value = keyword;
+                document.getElementById('destination').value = "Bangkok";
+                document.getElementById('catagory').value = "ALL";
+                api = "https://tatapi.tourismthailand.org/tatapi/v5/places/search?keyword=" + "วัด" + "&categories=" + "ALL" + "&provinceName=" + "";
+            }
+            const decodeurl = decodeURIComponent(api);
+
+            $.getJSON(decodeurl, function(json) {
+                console.log(json)
+                address = JSON.stringify(json.result[0].latitude).slice(1, -1) + "," + JSON.stringify(json.result[0].longitude).slice(1, -1)
+                console.log(address)
+                document.getElementById("01").innerHTML = JSON.stringify(json.result[0].place_name).slice(1, -1)
+                document.getElementById("02").innerHTML = JSON.stringify(json.result[0].destination).slice(1, -1)
+                document.getElementById("03").src = JSON.stringify(json.result[0].thumbnail_url).slice(1, -1)
+                document.getElementById("04").href = "single-listing?type=" + JSON.stringify(json.result[0].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[0].place_id).slice(1, -1)
+                place_id[0] = JSON.stringify(json.result[0].place_id).slice(1, -1)
+
+                document.getElementById("11").innerHTML = JSON.stringify(json.result[1].place_name).slice(1, -1)
+                document.getElementById("12").innerHTML = JSON.stringify(json.result[1].destination).slice(1, -1)
+                document.getElementById("13").src = JSON.stringify(json.result[1].thumbnail_url).slice(1, -1)
+                document.getElementById("14").href = "single-listing?type=" + JSON.stringify(json.result[1].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[1].place_id).slice(1, -1)
+                place_id[1] = json.result[1].place_id
+
+                document.getElementById("21").innerHTML = JSON.stringify(json.result[2].place_name).slice(1, -1)
+                document.getElementById("22").innerHTML = JSON.stringify(json.result[2].destination).slice(1, -1)
+                document.getElementById("23").src = JSON.stringify(json.result[2].thumbnail_url).slice(1, -1)
+                document.getElementById("24").href = "single-listing?type=" + JSON.stringify(json.result[2].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[2].place_id).slice(1, -1)
+                place_id[2] = json.result[2].place_id
+
+                document.getElementById("31").innerHTML = JSON.stringify(json.result[3].place_name).slice(1, -1)
+                document.getElementById("32").innerHTML = JSON.stringify(json.result[3].destination).slice(1, -1)
+                document.getElementById("33").src = JSON.stringify(json.result[3].thumbnail_url).slice(1, -1)
+                document.getElementById("34").href = "single-listing?type=" + JSON.stringify(json.result[3].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[3].place_id).slice(1, -1)
+                place_id[3] = json.result[3].place_id
+
+                document.getElementById("41").innerHTML = JSON.stringify(json.result[4].place_name).slice(1, -1)
+                document.getElementById("42").innerHTML = JSON.stringify(json.result[4].destination).slice(1, -1)
+                document.getElementById("43").src = JSON.stringify(json.result[4].thumbnail_url).slice(1, -1)
+                document.getElementById("44").href = "single-listing?type=" + JSON.stringify(json.result[4].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[4].place_id).slice(1, -1)
+                place_id[4] = json.result[4].place_id
+            });
+        });
+    </script>
+
 </body>
 
 </html>
