--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -298,7 +298,7 @@
             <!-- Explore Search Result -->
             <div class="explore-search-result">
                 <!-- Single Features Area -->
-                <a id="04" href="/">
+                <div id="04" onclick="window.location='#';">
                     <div class="single-features-area">
                         <img id="03" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
                         <!-- Price -->
@@ -317,7 +317,7 @@
                             </div>
                         </div>
                     </div>
-                </a>
+                </div>
                 <!-- Single Features Area -->
                 <a id="14" href="/">
                     <div class="single-features-area">
