--- a/views/listing.ejs
+++ b/views/listing.ejs
@@ -118,7 +118,7 @@
                 <div class="col-12">
                     <div class="section-heading dark text-center">
                         <span></span>
-                        <h4>Restaurant</h4>
+                        <h4>Favorite</h4>
                         <p></p>
                     </div>
                 </div>
@@ -336,8 +336,15 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
+    <!-- Api JS -->
+    <script src="js/api_search.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
+    <!-- Favorite -->
+    <script src="js/favorite.js"></script>
+    <script>
+        $(document).ready(setup(),readcookie());
+    </script>
 </body>
 
 </html>
