--- a/views/index.ejs
+++ b/views/index.ejs
@@ -417,12 +417,11 @@
                 <div class="col-12">
                     <div class="section-heading dark text-center">
                         <span></span>
-                        <h4>Featured Hotels</h4>
+                        <h4 id="099">Featured Hotels</h4>
                         <p>Editor’s pick</p>
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-12">
                     <div class="features-slides owl-carousel">
@@ -436,8 +435,8 @@
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5 class="name">Lantana Resort</h5>
-                                    <p class="destination">Bangkok</p>
+                                    <p class="name">asdasdasd</a>
+                                    <p class="destination"></p>
                                 </div>
                                 <div class="feature-favourite">
                                     <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
