--- a/views/listing.ejs
+++ b/views/listing.ejs
@@ -123,20 +123,20 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="row">
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
                         <!-- <img src="img/bg-img/feature-1.jpg" alt=""> -->
-                        <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg" alt="">
+                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg" alt="">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p></p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Treat Cafe & Hang Out</h5>
-                                <p>Bangkok</p>
+                                <h5 class="name" >Treat Cafe & Hang Out</h5>
+                                <p class="destination">Bangkok</p>
                             </div>
                             <div class="feature-favourite">
                                 <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
@@ -148,15 +148,15 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
                         <!-- <img src="img/bg-img/feature-2.jpg" alt=""> -->
-                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png" alt="">
+                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png" alt="">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p></p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Cafe Jardin</h5>
-                                <p>Bangkok</p>
+                                <h5 class="name" >Cafe Jardin</h5>
+                                <p class="destination">Bangkok</p>
                             </div>
                             <div class="feature-favourite">
                                 <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
@@ -168,14 +168,14 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
                         <!-- <img src="img/bg-img/feature-3.jpg" alt=""> -->
-                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png" alt="">
+                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png" alt="">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p></p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>SEIRYU Sushi</h5>
+                                <h5 class="name">SEIRYU Sushi</h5>
                                 <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
@@ -187,14 +187,14 @@
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png" alt="">
+                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png" alt="">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p></p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>9ban Cafe & Kanom Thai</h5>
+                                <h5 class="name">9ban Cafe & Kanom Thai</h5>
                                 <p>Songkla</p>
                             </div>
                             <div class="feature-favourite">
@@ -206,14 +206,14 @@
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg" alt="">
+                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg" alt="">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p></p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Bicycle Cafe</h5>
+                                <h5 class="name">Bicycle Cafe</h5>
                                 <p>Kanjanaburi</p>
                             </div>
                             <div class="feature-favourite">
@@ -225,14 +225,14 @@
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08012291_1.png" alt="">
+                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08012291_1.png">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p></p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>100 Mahaseth</h5>
+                                <h5 class="name">100 Mahaseth</h5>
                                 <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
@@ -336,14 +336,14 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
-    <!-- Api JS -->
-    <script src="js/api_search.js"></script>
+    <!-- Api Index -->
+    <script src="js/api_index.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
     <!-- Favorite -->
     <script src="js/favorite.js"></script>
     <script>
-        $(document).ready(setup(),readcookie());
+        $(document).ready(readcookie());
     </script>
 </body>
 
